few more style fixes on mobile

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,14 +1,14 @@
 @font-face {
-    font-family: PoppinsMed;
-    src: url(/Fonts/Poppins/Poppins-Medium.ttf);
+  font-family: PoppinsMed;
+  src: url(/fonts/Poppins/Poppins-Medium.ttf);
 }
 
 @font-face {
-    font-family: PoppinsLight;
-    src: url(/Fonts/Poppins/Poppins-Light.ttf);
+  font-family: PoppinsLight;
+  src: url(/fonts/Poppins/Poppins-Light.ttf);
 }
 
 @font-face {
-    font-family: PoppinsSemiBold;
-    src: url(/Fonts/Poppins/Poppins-Light.ttf);
+  font-family: PoppinsSemiBold;
+  src: url(/fonts/Poppins/Poppins-Light.ttf);
 }
