--- a/css/main.css
+++ b/css/main.css
@@ -249,6 +249,7 @@ img {
   border-radius: 10px;
   border: none;
   box-shadow: 0px 5px rgb(59, 117, 121);
+  background-color: white;
 }
 
 .color-switch-btns {
